# git-substatus

./: Cargo.toml  README.md
src/: actions.rs  app.rs  cli.rs  diff.rs  discovery.rs  event.rs  git.rs  main.rs  model.rs  scan.rs  ui.rs  watcher.rs
