[package]
name = "git-substatus"
version = "0.1.0"
edition = "2024"
description = "Interactive TUI to view git status across many repos at once — parallel scan, filesystem-watch refresh, in-app diffs, custom actions"
license = "MIT"
repository = "https://github.com/npenkov/git-substatus"
readme = "README.md"
keywords = ["git", "tui", "ratatui", "status", "gitoxide"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dirs = "6.0.0"
gix = { version = "0.84.0", features = ["status", "blob-diff", "dirwalk", "revision"] }
imara-diff = "0.2.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
ratatui = "0.30.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.1"
toml = "1.1.2"
walkdir = "2.5.0"
